DEAL-1177: Fixed submit screen (set fixed width and align content by center) [0.0.5]

--- a/Client/DealnetPortal.Web/Content/less/credit-check.less
+++ b/Client/DealnetPortal.Web/Content/less/credit-check.less
@@ -557,9 +557,7 @@ select.dealnet-disabled-input{
     }
   }
 }
-.sent-contract-section{
-  margin-top: 20px;
-}
+
 .equipment-info{
   .dealnet-disabled-input{
     text-align: left;
